<?xml version="1.0" encoding="utf-8"?>

<!--
alsa-control-server
shane tully (shane@shanetully.com)
shanetully.com
https://github.com/shanet/Alsa-Channel-Control
-->

<resources>
    <string name="app_name">Alsa Control Android Client</string>
    
    <string name="serverLabel">Server:</string>
    <string name="channelLabel">Channel:</string>
    <string name="portLabel">Port:</string>
    <string name="portMenuLabel">Set Port</string>
    <string name="leftVolLabel">Left Volume:</string>
    <string name="rightVolLabel">Right Volume:</string>
    <string name="lockLabel">Lock Volumes</string>
    
    <string name="addServer">Add Server</string>
    <string name="addChannel">Add Channel</string>
    <string name="editPort">Edit Port</string>
    
    <string name="deleteServerTitle">Delete Server</string>
    <string name="deleteChannelTitle">Delete Channel</string>
    <string name="deleteDialog">Are you sure you want to delete \"%s\"?</string>
    
    <string name="emptyServer">No server(s) selected!</string>
    <string name="emptyChannel">No channel(s) selected!</string>
    <string name="emptyAddServer">Server cannot be blank!</string>
    <string name="emptyAddChannel">Channel cannot be blank!</string>
    <string name="emptyPort">Port cannot be blank!</string>
    
    <string name="sentPlay">%s command sent</string>
    <string name="sentNext">Next command sent</string>
    <string name="sentPrev">Previous command sent</string>
    
    <string name="connServer">Connecting to server&#8230;</string>
    <string name="commServer">Communicating with server&#8230;</string>
    
    <string name="submit">Submit</string>
    <string name="play">Play/Pause</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="okay">Okay</string>
    <string name="yes">Yes</string>
    <string name="nope">Nope</string>
    <string name="nevermind">Nevermind</string>
 	<string name="cancel">Cancel</string>
 	<string name="close">Close</string>
	<string name="exitBtn">Exit</string>
	<string name="no">No!</string>
	<string name="save">Save</string>
    <string name="whatsnew">What\'s New</string>
    <string name="about">About</string>
    <string name="nullStr">null</string>
    <string name="volumeSet">Volume Changed</string>
    
    <string-array name="channels">
        <item>Master</item>
        <item>Front</item>
        <item>PCM</item>
    </string-array>
    
    <string name="readIOErrorTitle">Read IO Error</string>
    <string name="readIOError">There was an error reading the saved servers from the disk.</string>
    <string name="writeIOErrorTitle">Write IO Error</string>
    <string name="writeIOError">There was error writing the server to the saved servers list. It will not be saved.</string>
    <string name="serverConnectErrorTitle">Network Error</string>
    <string name="serverConnectError">Unable to connect to server.</string>
    <string name="unknownHostErrorTitle">Network Error</string>
    <string name="unknownHostError">The specified server could not be found on the network.</string>
    <string name="serverCommErrorTitle">Server Error</string>
    <string name="serverCommError">The server sent unexpected data or no data at all.</string>
    <string name="closedConnErrorTitle">Server Closed Connection</string>
    <string name="closedConnError">The server unexpectedly closed the connection.</string>
    <string name="setStateErrorTitle">Server Error</string>
    <string name="setStateError">The server reported an error. Try again.</string>
    <string name="setVolumeErrorTitle">Set Volume Error</string>
    <string name="setVolumeError">An error occurred while setting the volume. Try again.</string>
    <string name="mediaCommandErrorTitle">Media Command Error</string>
    <string name="mediaCommandError">An error occurred while processing the media command on the server. Try again.</string>
    <string name="malformedDataErrorTitle">Malformed Data Error</string>
    <string name="malformedDataError">A background thread received malformed or unexpected data.</string>
    
    <string name="welcomeTitle">Welcome!</string>
   	<string name="aboutThisAppTitle">About This App</string>
	<string name="aboutThisAppText">
		<b>About this app</b>\n\t
			This app is a simple client for changing the volume on a computer running Alsa (aka mainly Linux systems). To use it you must have the server
			installed and running on your computer with your firewall configured properly on the default port, 4242.\n\n
			
			The source for the server, this application, and a desktop client, can be found on GitHub at https://github.com/shanet/Alsa-Channel-Control.
			
			There are a few default channels included, but you\'ll likely want to add your own. You can find channels by running \"alsamixer\" on your computer
			in a terminal. Note that channels are case sensitive.
			
			Any bugs or feature requests should be made at the GitHub page linked to above.
	
		\n\n<b>License</b>\n\t
			This application is open source software. It is free to distribute, modify, and use with the exception of it being made closed source and sold for 
			commercial purposes without the consent of the author. However, the author simply requests that if you do something cool with it, you let him check 
			it out by emailing shane@shanetully.com or just let him know you find it useful.
	</string>
	
	<string name="changelogTitle">Changelog</string>
   	<string name="changelogText">
   		<b>Current Version: 2.0.0</b>
   		\n\n<b>2.0.0:</b>
   			\n\t-Added media keys
   			\n\t-Updated protocol to work with the newest version of the server
   			\n\t-Connections with server kept open as long as possible
   		\n\n<b>1.1.0:</b>
   			\n\t-Live volume changes instead of having a submit button
   		\n\n<b>1.0.1:</b>
   			\n\t-Patched a few protocol issues
   			\n\t-Fixed Set Port dialog not showing
   			\n\t-Reworked the backend slightly	
   			\n\t-Shows dialog when connecting to server if on slow connection
   		\n\n<b>1.0.0:</b>
   			\n\t-Initial release! :D
   	</string>

</resources>