<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	
    <TextView android:id="@+id/channelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView android:id="@+id/serverLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dip"
        android:layout_alignRight="@id/channelLabel"
        android:text="@string/serverLabel"/>
    <EditText android:id="@+id/serverText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/serverLabel"
        android:layout_alignBottom="@id/serverLabel"
        android:singleLine="true"
        android:inputType="text"
        android:text="192.168.1.152"/>
    
    <TextView android:id="@id/channelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/serverText"
        android:paddingTop="30dip"
        android:text="@string/channelLabel"/>
    <AutoCompleteTextView android:id="@+id/channelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/serverText"
        android:layout_toRightOf="@id/channelLabel"
        android:layout_alignBottom="@id/channelLabel"
        android:singleLine="true"/>
    
    <LinearLayout android:id="@+id/leftVolLayout"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_below="@id/channelText"
		android:layout_marginTop="40dip">
	    <TextView android:id="@+id/leftVolLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/leftVolLabel"/>
	    <NumberPicker android:id="@+id/leftVolPicker"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:width="100dip"/>
	</LinearLayout>
	
    <LinearLayout android:id="@+id/rightVolLayout"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_below="@id/channelText"
		android:layout_toRightOf="@id/leftVolLayout"
		android:layout_alignParentRight="true"
		android:layout_marginTop="40dip"
		android:layout_marginLeft="40dip">
	   	<TextView android:id="@+id/rightVolLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/rightVolLabel"/>
	   	<NumberPicker android:id="@+id/rightVolPicker"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:width="100dip"/>
	</LinearLayout>
   	
   	<Button android:id="@+id/submit"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@id/leftVolLayout"
   	    android:layout_centerHorizontal="true"
   	    android:text="@string/submit"/>
</RelativeLayout>
